@@ -7,7 +7,11 @@
 	  rdoc-osa.rb:
 	- Retrieves documentation from the sdef ;
 	- Added a new tool (rdoc-osa) that generates RDoc documentation for the
-	  given application.
+	  given application ;
+	- Fixed constant names generation.
+
+	* sample/iTunes_control.rb:
+	Follow new constant naming.
 
 	* TODO:
 	Revised.
